Successfully worked on the communication between servives by adding effective dtos and advanced on endpoints where I added puts and gets on rental-service
next step now that I managed to create a rental is to successfully cancel a confirmed rental, since before active we have confirmed
And I replaced LocalDateTime with LocalDate on my code to rent by days where hours and seconds don't matter